SFUSA/force-app/main/default/objects/Attendee__c/fields/Additional_Notes__c.field-meta.xml
<CustomField>
        <fullName>Additional_Notes__c</fullName>
        <label>Additional Notes</label>
        <type>TextArea</type>
    </CustomField>