SFUSA/force-app/main/default/objects/Attendee__c/fields/First_Name__c.field-meta.xml
<CustomField>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>