SFUSA/force-app/main/default/objects/Attendee__c/fields/Incoming_Airline__c.field-meta.xml
<CustomField>
        <fullName>Incoming_Airline__c</fullName>
        <label>Incoming Airline</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>