SFUSA/force-app/main/default/objects/Attendee__c/fields/Incoming_Flight_Number__c.field-meta.xml
<CustomField>
        <fullName>Incoming_Flight_Number__c</fullName>
        <label>Incoming Flight Number</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>