SFUSA/force-app/main/default/objects/Attendee__c/fields/Outgoing_Departure_Time__c.field-meta.xml
<CustomField>
        <fullName>Outgoing_Departure_Time__c</fullName>
        <label>Outgoing Departure Time</label>
        <type>DateTime</type>
    </CustomField>