SFUSA/force-app/main/default/objects/Attendee__c/fields/Outgoing_Final_Destination__c.field-meta.xml
<CustomField>
        <fullName>Outgoing_Final_Destination__c</fullName>
        <label>Outgoing Final Destination</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>