SFUSA/force-app/main/default/objects/Attendee__c/fields/Outgoing_Flight_Number__c.field-meta.xml
<CustomField>
        <fullName>Outgoing_Flight_Number__c</fullName>
        <label>Outgoing Flight Number</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>