SFUSA/force-app/main/default/objects/Attendee__c/fields/Plant_Event__c.field-meta.xml
<CustomField>
        <fullName>Plant_Event__c</fullName>
        <label>Plant Event</label>
        <referenceTo>Plant_Event__c</referenceTo>
        <relationshipLabel>Attendees</relationshipLabel>
        <relationshipName>Attendees</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </CustomField>